--- a/py38/lidar-visualisations/Dockerfile
+++ b/py38/lidar-visualisations/Dockerfile
@@ -1,4 +1,7 @@
 FROM py38
 
+RUN apt-get update
+RUN apt install -y libgl1-mesa-glx
+
 COPY requirements.txt ./
 RUN pip3 install -r requirements.txt
